--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -2,7 +2,6 @@ name: GitHub Classroom Workflow
 on:
   push:
     branches:
-      - master
       - develop
   pull_request:
     branches:
@@ -31,6 +30,10 @@ jobs:
           ./scripts/wait-script.sh
         env:
           - WAIT_PORTS=8080,8070,8060,8050
+
+      - name: Countdown
+        run: sleep 30s
+        shell: bash
 
       - name: Run API Tests
         uses: matt-ball/newman-action@master
