--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -31,6 +31,8 @@ jobs:
         env:
           WAIT_PORTS: 8080,8070,8060,8050
 
+      - name: Run API Tests
+      run:
       # - name: Run API Tests
       #   uses: matt-ball/newman-action@master
       #   with:
