--- a/src/gatewayService/requirements.txt
+++ b/src/gatewayService/requirements.txt
@@ -1,8 +1,19 @@
-Flask==1.1.2
-Flask_Migrate==3.1.0
-Flask_RESTful==0.3.8
-Flask_SQLAlchemy==2.4.3
-marshmallow==3.14.0
-psycopg2==2.9.5
-psycopg2_binary==2.8.6
-SQLAlchemy==1.3.18
+alembic==1.8.1
+aniso8601==9.0.1
+click==8.1.3
+Flask==2.2.2
+flask-marshmallow==0.14.0
+Flask-RESTful==0.3.9
+greenlet==1.1.3
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.3
+MarkupSafe==2.1.1
+marshmallow==3.18.0
+packaging==21.3
+pyparsing==3.0.9
+pytz==2022.4
+six==1.16.0
+Werkzeug==2.2.2
+zipp==3.9.0
