--- a/src/paymentService/requirements.txt
+++ b/src/paymentService/requirements.txt
@@ -1,9 +1,26 @@
-Flask==1.1.2
-flask_marshmallow==0.14.0
-Flask_Migrate==3.1.0
-Flask_RESTful==0.3.8
-Flask_SQLAlchemy==2.4.3
-marshmallow==3.14.0
-psycopg2==2.9.5
-psycopg2_binary==2.8.6
-SQLAlchemy==1.3.18
+alembic==1.8.1
+aniso8601==9.0.1
+click==8.1.3
+Flask==2.2.2
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.0
+greenlet==1.1.3
+gunicorn==20.1.0
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.3
+MarkupSafe==2.1.1
+marshmallow==3.18.0
+marshmallow-sqlalchemy==0.28.1
+packaging==21.3
+psycopg2==2.9.4
+psycopg2-binary==2.9.4
+pyparsing==3.0.9
+pytz==2022.4
+six==1.16.0
+SQLAlchemy==1.4.41
+Werkzeug==2.2.2
+zipp==3.9.0
