--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -27,6 +27,7 @@ jobs:
         timeout-minutes: 5
         run: |
           docker compose up -d
+          sleep 5
           ./scripts/wait-script.sh
         env:
           WAIT_PORTS: 8080,8070,8060,8050
